Bug 455178 - Animation timeline scroll wheel get stuck after going past end frame
Summary: Animation timeline scroll wheel get stuck after going past end frame
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-12 10:27 UTC by Alvin Wong
Modified: 2022-06-21 03:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2022-06-12 10:27:43 UTC
SUMMARY
Using the scroll wheel to scroll through frames stops working after going past the end frame.

STEPS TO REPRODUCE
1.  Zoom in the timeline a bit so not all frames are visible (not necessary)
2. Use scroll wheel (scroll up) to go forward until the current frame goes past the end frame and stops scrolling
3. Try to use scroll wheel (scroll down) to go backward

OBSERVED RESULT
Current frame is stuck and doesn't go backward

EXPECTED RESULT
Current frame should go backward

SOFTWARE/OS VERSIONS
Windows: Windows 10

ADDITIONAL INFORMATION
Nightly a728092
Comment 1 Emmet O'Neill 2022-06-14 00:04:41 UTC
Git commit 2ab171c545c1ece49b6a4b80f5e00f55e4b2eaa4 by Emmet O'Neill.
Committed on 14/06/2022 at 00:02.
Pushed by emmetoneill into branch 'master'.

Animation Timeline: Fixed mousewheel scrubbing behavior.

The mouse wheel no longer gets stuck after scrolling beyond the end
frame of the animation range.

M  +7    -8    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/2ab171c545c1ece49b6a4b80f5e00f55e4b2eaa4
Comment 2 Emmet O'Neill 2022-06-21 03:13:41 UTC
Git commit 2b0d525c23441cf17a4091f6c3788ca042ecd439 by Emmet O'Neill.
Committed on 21/06/2022 at 03:03.
Pushed by emmetoneill into branch 'krita/5.1'.

Animation Timeline: Fixed mousewheel scrubbing behavior.

The mouse wheel no longer gets stuck after scrolling beyond the end
frame of the animation range.

M  +7    -8    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/2b0d525c23441cf17a4091f6c3788ca042ecd439