Animation Timeline: Fixed mousewheel scrubbing behavior.

The mouse wheel no longer gets stuck after scrolling beyond the end
frame of the animation range.

BUG:455178